# goldfish

./: Cargo.toml
goldfish/: Cargo.toml
goldfish-core/: Cargo.toml
goldfish-core/src/: ast.rs  common.rs  lib.rs  model.rs  parse.rs  state.rs
goldfish-core/src/state/: card.rs
goldfish/src/: main.rs
