[package]
name = "goldfish"
version = "0.1.0"
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
edition = "2018"

[dependencies]
rustyline = "5.0.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.goldfish-core]
path = "../goldfish-core"
