[package]
name = "goldfish"
version = "0.1.0"
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
edition = "2018"
description = "A 'Magic: The Gathering' goldfish application"

[dependencies]
rustyline = "5.0.5"
structopt = "0.3.7"
dirs = "2.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.goldfish-core]
path = "../goldfish-core"
